Changes more menu to about

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          </div>
          <div class="header-right">
            <a class="active" href="#">Login</a>
-           <a href="#">more<i class="fas fa-sort-down"></i></a>
+           <a href="#">About<i class="fas fa-sort-down"></i></a>
            <a href="#"><i class="fas fa-shopping-cart"></i>cart</a>
          </div>
     </header>
