--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Flipkart</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font awsome icon/css/all.css">
-    <link rel="stylesheet" href="font style/Roboto-MediumItalic.ttf">
+    <!-- <link rel="stylesheet" href="font style/Roboto-MediumItalic.ttf"> -->
     
 </head>
 <body>
@@ -44,39 +44,39 @@
 <section>
    <div class="category-row">
        <div class="category-col">
-           <img src="flipkart images/hp1.png" alt="">
+           <img src="images/hp1.png" alt="">
            <h5>Top Offers</h5>
        </div>
        <div class="category-col">
-           <img src=" flipkart images/hp2.png" alt="">
+           <img src="images/hp2.png" alt="">
            <h5>grocery</h5>
        </div>
        <div class="category-col">
-           <img src=" flipkart images/hp3.png" alt="">
+           <img src=" images/hp3.png" alt="">
            <h5>mobile</h5>
        </div>
        <div class="category-col">
-           <img src=" flipkart images/hp4.png" alt="">
+           <img src=" images/hp4.png" alt="">
            <h5>fashion</h5>
        </div>
        <div class="category-col">
-           <img src=" flipkart images/hp5.png" alt="">
+           <img src=" images/hp5.png" alt="">
            <h5>electronics</h5>
        </div>
        <div class="category-col">
-           <img src=" flipkart images/hp6.png" alt="">
+           <img src="images/hp6.png" alt="">
            <h5>home</h5>
        </div>
        <div class="category-col">
-           <img src=" flipkart images/hp7.png" alt="">
+           <img src="images/hp7.png" alt="">
            <h5>appliances</h5>
        </div>
        <div class="category-col">
-           <img src=" flipkart images/hp8.png" alt="">
+           <img src="images/hp8.png" alt="">
            <h5>travel</h5>
        </div>
        <div class="category-col">
-           <img src=" flipkart images/hp9.png" alt="">
+           <img src=" images/hp9.png" alt="">
            <h5>Beauty,Toys&More</h5>
        </div>
 
@@ -87,10 +87,10 @@
 <section>
 <div class="banner">
    <div class="slider">
-       <img src=" flipkart images/banner2.jpg" alt="banner">
-       <img src=" flipkart images/banner3.jpg" alt="banner">
-       <img src=" flipkart images/banner4.jpg" alt="banner">
-       <img src=" flipkart images/banner2.jpg" alt="banner">
+       <img src=" images/banner2.jpg" alt="banner">
+       <img src=" images/banner3.jpg" alt="banner">
+       <img src=" images/banner4.jpg" alt="banner">
+       <img src=" images/banner2.jpg" alt="banner">
       >
    </div>
 </div>
@@ -111,43 +111,43 @@
        </div>
        <div class="common-row">
            <div class="common-col">
-               <img src=" flipkart images/p1.jpeg" alt="mobile">
+               <img src="images/p1.jpeg" alt="mobile">
                <h3>Poco m2 pro</h3>
                <h4>5000mAh Bttery</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>13999</h6>
            </div>
            <div class="common-col">
-               <img src=" flipkart images/p2.jpeg" alt="mobile">
+               <img src="images/p2.jpeg" alt="mobile">
                <h3>tecno spark</h3>
                <h4>4500mAh Bttery</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>14999</h6>
            </div>
            <div class="common-col">
-               <img src=" flipkart images/p3.jpeg" alt="mobile">
+               <img src="images/p3.jpeg" alt="mobile">
                <h3>vivio</h3>
                <h4>5000mAh Bttery</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>15999</h6>
            </div>
            <div class="common-col">
-               <img src=" flipkart images/p4.jpeg" alt="mobile">
+               <img src="images/p4.jpeg" alt="mobile">
                <h3>samsung</h3>
                <h4>5500mAh Bttery</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>23999</h6>
            </div>
            <div class="common-col">
-               <img src=" flipkart images/p5.jpeg" alt="mobile">
+               <img src=" images/p5.jpeg" alt="mobile">
                <h3>realme</h3>
                <h4>5000mAh Bttery</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>13999</h6>
            </div>
            <div class="common-col">
-               <img src=" flipkart images/p6.jpeg" alt="mobile">
+               <img src="images/p6.jpeg" alt="mobile">
                <h3>oppo pro</h3>
                <h4>5200mAh Bttery</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>18999</h6>
            </div>
            <div class="common-col">
-               <img src=" flipkart images/p7.jpeg" alt="mobile">
+               <img src="images/p7.jpeg" alt="mobile">
                <h3>samsung</h3>
                <h4>5000mAh Bttery</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>11999</h6>
@@ -174,43 +174,43 @@
           </div>
           <div class="common-row">
            <div class="common-col col-headphones">
-               <img src=" flipkart images/s1.jpeg" alt="mobile">
+               <img src="images/s1.jpeg" alt="mobile">
                <h3> Bluetooth Headphones</h3>
                <h4>new lancher</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>399</h6>
            </div>
            <div class="common-col col-headphones">
-               <img src=" flipkart images/s2.jpeg" alt="mobile">
+               <img src="images/s2.jpeg" alt="mobile">
                <h3>tecno speaker</h3>
                <h4>new lancher</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>499</h6>
            </div>
            <div class="common-col col-headphones">
-               <img src=" flipkart images/s3.jpeg" alt="mobile">
+               <img src="images/s3.jpeg" alt="mobile">
                <h3>true wireless</h3>
                <h4>new lancher</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>159</h6>
            </div>
            <div class="common-col col-headphones">
-               <img src=" flipkart images/s4.jpeg" alt="mobile">
+               <img src="images/s4.jpeg" alt="mobile">
                <h3>wired hearphones</h3>
                <h4>new lancher</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>239</h6>
            </div>
            <div class="common-col col-headphones">
-               <img src=" flipkart images/s5.jpeg" alt="mobile">
+               <img src="images/s5.jpeg" alt="mobile">
                <h3>speaker</h3>
                <h4>new lancher</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>139</h6>
            </div>
            <div class="common-col col-headphones">
-               <img src=" flipkart images/s6.jpeg" alt="mobile">
+               <img src="images/s6.jpeg" alt="mobile">
                <h3>Bluetooth Headphones</h3>
                <h4>new lancher</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>1899</h6>
            </div>
            <div class="common-col col-headphones">
-               <img src=" flipkart images/s7.jpeg" alt="mobile">
+               <img src="images/s7.jpeg" alt="mobile">
                <h3>Bluetooth Headphones</h3>
                <h4>new lancher</h4>
                <h6>Now<i class="fas fa-rupee-sign"></i>999</h6>
@@ -236,43 +236,43 @@
        </div>
        <div class="common-row">
         <div class="common-col col-men">
-            <img src=" flipkart images/c1.jpeg" alt="mobile">
+            <img src="images/c1.jpeg" alt="mobile">
             <h3> t-shirt</h3>
             <h4> up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>299</h6>
         </div>
         <div class="common-col col-men">
-            <img src=" flipkart images/c2.jpeg" alt="mobile">
+            <img src="images/c2.jpeg" alt="mobile">
             <h3> t-shirt black</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>399</h6>
         </div>
         <div class="common-col col-men">
-            <img src=" flipkart images/c3.jpeg" alt="mobile">
+            <img src="images/c3.jpeg" alt="mobile">
             <h3>cap</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>99</h6>
         </div>
         <div class="common-col col-men">
-            <img src=" flipkart images/c4.jpeg" alt="mobile">
+            <img src="images/c4.jpeg" alt="mobile">
             <h3> cool cap</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>199</h6>
         </div>
         <div class="common-col col-men">
-            <img src=" flipkart images/c5.jpg" alt="mobile">
+            <img src="images/c5.jpg" alt="mobile">
             <h3>jeans</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>149</h6>
         </div>
         <div class="common-col col-men">
-            <img src=" flipkart images/c6.jpeg" alt="mobile">
+            <img src="images/c6.jpeg" alt="mobile">
             <h3>shirt</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>499</h6>
         </div>
         <div class="common-col col-men">
-            <img src=" flipkart images/c7.jpeg" alt="mobile">
+            <img src="images/c7.jpeg" alt="mobile">
             <h3>short</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>599</h6>
@@ -298,43 +298,43 @@
        </div>
        <div class="common-row">
         <div class="common-col col-furniture">
-            <img src=" flipkart images/f1.jpeg" alt="mobile">
+            <img src="images/f1.jpeg" alt="mobile">
             <h3> swing chair</h3>
             <h4> up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>3399</h6>
         </div>
         <div class="common-col col-furniture">
-            <img src=" flipkart images/f2.jpeg" alt="mobile">
+            <img src="images/f2.jpeg" alt="mobile">
             <h3>bean bag cover</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>2499</h6>
         </div>
         <div class="common-col col-furniture">
-            <img src=" flipkart images/f3.jpeg" alt="mobile">
+            <img src="images/f3.jpeg" alt="mobile">
             <h3>furniture</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>2999</h6>
         </div>
         <div class="common-col col-furniture">
-            <img src=" flipkart images/f4.jpeg" alt="mobile">
+            <img src="images/f4.jpeg" alt="mobile">
             <h3> soffaa</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>4999</h6>
         </div>
         <div class="common-col col-furniture">
-            <img src=" flipkart images/f5.jpeg" alt="mobile">
+            <img src="images/f5.jpeg" alt="mobile">
             <h3>chair</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>1599</h6>
         </div>
         <div class="common-col col-furniture">
-            <img src=" flipkart images/f6.jpeg" alt="mobile">
+            <img src="images/f6.jpeg" alt="mobile">
             <h3>mirror table</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>9899</h6>
         </div>
         <div class="common-col col-furniture">
-            <img src=" flipkart images/f7.jpeg" alt="mobile">
+            <img src="images/f7.jpeg" alt="mobile">
             <h3>swing chair</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>1999</h6>
@@ -360,43 +360,43 @@
        </div>
        <div class="common-row">
         <div class="common-col col-tranding">
-            <img src=" flipkart images/w1.jpeg" alt="mobile">
+            <img src="images/w1.jpeg" alt="mobile">
             <h3> cotton shirt</h3>
             <h4> up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>399</h6>
         </div>
         <div class="common-col col-tranding">
-            <img src=" flipkart images/w2.jpeg" alt="mobile">
+            <img src="images/w2.jpeg" alt="mobile">
             <h3>fast-trsct watch</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>499</h6>
         </div>
         <div class="common-col col-tranding">
-            <img src=" flipkart images/w3.jpeg" alt="mobile">
+            <img src="images/w3.jpeg" alt="mobile">
             <h3> saree</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>159</h6>
         </div>
         <div class="common-col col-tranding">
-            <img src=" flipkart images/w4.jpeg" alt="mobile">
+            <img src="images/w4.jpeg" alt="mobile">
             <h3> silver watch</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>239</h6>
         </div>
         <div class="common-col col-tranding">
-            <img src=" flipkart images/m5.jpeg" alt="mobile">
+            <img src="images/m5.jpeg" alt="mobile">
             <h3>watch</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>539</h6>
         </div>
         <div class="common-col col-tranding">
-            <img src=" flipkart images/w6.jpeg" alt="mobile">
+            <img src="images/w6.jpeg" alt="mobile">
             <h3>dress</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>899</h6>
         </div>
         <div class="common-col col-tranding">
-            <img src=" flipkart images/m6.jpeg" alt="mobile">
+            <img src="images/m6.jpeg" alt="mobile">
             <h3>black watch</h3>
             <h4>up to 20% off</h4>
             <h6>Now<i class="fas fa-rupee-sign"></i>999</h6>
@@ -420,43 +420,43 @@
         </div>
         <div class="common-row">
          <div class="common-col col-headphones">
-             <img src="Flipkart images/hp5.png" alt="mobile">
+             <img src="images/hp5.png" alt="mobile">
              <h3> Laptop & Headphones</h3>
              <h4>new lancher</h4>
              <h6>Now<i class="fas fa-rupee-sign"></i>24999</h6>
          </div>
          <div class="common-col col-headphones">
-             <img src="Flipkart images/w5.jpeg" alt="mobile">
+             <img src="images/w5.jpeg" alt="mobile">
              <h3>wall watch</h3>
              <h4>new lancher</h4>
              <h6>Now<i class="fas fa-rupee-sign"></i>499</h6>
          </div>
          <div class="common-col col-headphones">
-             <img src=" flipkart images/s3.jpeg" alt="mobile">
+             <img src="images/s3.jpeg" alt="mobile">
              <h3>true wireless</h3>
              <h4>new lancher</h4>
              <h6>Now<i class="fas fa-rupee-sign"></i>459</h6>
          </div>
          <div class="common-col col-headphones">
-             <img src=" flipkart images/hp4.png" alt="mobile">
+             <img src="images/hp4.png" alt="mobile">
              <h3>couple set</h3>
              <h4>new lancher</h4>
              <h6>Now<i class="fas fa-rupee-sign"></i>239</h6>
          </div>
          <div class="common-col col-headphones">
-             <img src=" flipkart images/s5.jpeg" alt="mobile">
+             <img src="images/s5.jpeg" alt="mobile">
              <h3>speaker</h3>
              <h4>new lancher</h4>
              <h6>Now<i class="fas fa-rupee-sign"></i>139</h6>
          </div>
          <div class="common-col col-headphones">
-             <img src=" flipkart images/m4.jpeg" alt="mobile">
+             <img src="images/m4.jpeg" alt="mobile">
              <h3>latest purse</h3>
              <h4>new lancher</h4>
              <h6>Now<i class="fas fa-rupee-sign"></i>1899</h6>
          </div>
          <div class="common-col col-headphones">
-             <img src=" flipkart images/hp8.png" alt="mobile">
+             <img src="images/hp8.png" alt="mobile">
              <h3> Kids Aeroplane</h3>
              <h4>new lancher</h4>
              <h6>Now<i class="fas fa-rupee-sign"></i>999</h6>
@@ -571,7 +571,7 @@
            <p>© 2007-2021 Flipkart.com</p>
        </div>
        <div class="footer-row2-col">
-           <img src=" flipkart images/payment.png" alt="payments">
+           <img src="images/payment.png" alt="payments">
        </div>
    </div>
 </footer>
