--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section>
         <div class="offer">
             
-                <img src="flipkart images/offer.jpeg" alt="">
+                <img src="images/offer.jpeg" alt="">
                 </div>
     </section>
 
