--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <div class="header-center">
                 <input class="header-center-input" type="text" placeholder=" Search......"><i class="fas fa-search"></i>
             </div>
-            <div class="header-right">
+            <!-- <div class="header-right">
                 <a class="active" href="#">Login</a>
                 <a href="#">About<i class="fas fa-sort-down"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i>cart</a>
-            </div>
+            </div> -->
         </div>
     </header>
 
@@ -201,15 +201,31 @@
 
     <!-- banner section -->
     <section>
-        <div class="banner">
-            <div class="slider">
-                <img src=" images/banner2.jpg" alt="banner">
-                <img src=" images/banner3.jpg" alt="banner">
-                <img src=" images/banner4.jpg" alt="banner">
-                <img src=" images/banner2.jpg" alt="banner">
-
+        <!-- large -->
+        <div class="w-full items-center justify-between hidden lg:flex px-12">
+            <div class="banner">
+                <div class="slider">
+                    <img src=" images/banner2.jpg" alt="banner">
+                    <img src=" images/banner3.jpg" alt="banner">
+                    <img src=" images/banner4.jpg" alt="banner">
+                    <img src=" images/banner2.jpg" alt="banner">
+                </div>
             </div>
         </div>
+
+        <!-- mobile -->
+
+        <div class="flex w-full item-center justify-between lg:hidden px-12">
+            <div class="banner">
+                <div class="slider">
+                    <img src=" images/banner2.jpg" alt="banner">
+                    <img src=" images/banner3.jpg" alt="banner">
+                    <img src=" images/banner4.jpg" alt="banner">
+                    <img src=" images/banner2.jpg" alt="banner">
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <!-- Mobile section -->
